feat: introduce EsignEmailDynamicFields for enhanced in-app notifications