@@ -44,6 +44,7 @@ import com.skapp.enterprise.esignature.model.Envelope;
 import com.skapp.enterprise.esignature.model.EnvelopeSetting;
 import com.skapp.enterprise.esignature.model.Field;
 import com.skapp.enterprise.esignature.model.Recipient;
+import com.skapp.enterprise.esignature.payload.email.EsignEmailDynamicFields;
 import com.skapp.enterprise.esignature.payload.request.DeclineEnvelopeRequestDto;
 import com.skapp.enterprise.esignature.payload.request.DocumentSignDto;
 import com.skapp.enterprise.esignature.payload.request.EnvelopeDetailDto;
@@ -974,14 +975,16 @@ public class EnvelopeServiceImpl implements EnvelopeService {
 		envelope = envelopeDao.save(envelope);
 
 		// Create in-app notifications for void - all recipients get notified
-		String documentName = EsignUtil.truncateDocumentName(envelope.getDocuments().get(0).getName());
-		Map<String, String> notificationFields = Map.of("documentName", documentName, "senderName", envelope.getOwner().getName());
+		String documentName = EsignUtil.truncateDocumentName(envelope.getDocuments().getFirst().getName());
+		EsignEmailDynamicFields esignEmailDynamicFields = new EsignEmailDynamicFields();
+		esignEmailDynamicFields.setDocumentName(documentName);
+		esignEmailDynamicFields.setSenderName(envelope.getOwner().getName());
 
 		for (Recipient rec : envelope.getRecipients()) {
 			if (rec.getAddressBook() != null && rec.getAddressBook().getInternalUser() != null && rec.getAddressBook().getInternalUser().getEmployee() != null) {
 				notificationService.createNotification(rec.getAddressBook().getInternalUser().getEmployee(),
 					String.valueOf(envelope.getId()), NotificationType.DOCUMENT_VOIDED,
-					EmailBodyTemplates.ESIGN_DOCUMENT_VOIDED, notificationFields,
+					EmailBodyTemplates.ESIGN_DOCUMENT_VOIDED, esignEmailDynamicFields,
 					NotificationCategory.ESIGN);
 			}
 		}
@@ -1008,7 +1011,7 @@ public class EnvelopeServiceImpl implements EnvelopeService {
 	}
 
 	private List<SignedDocumentResponse> getDocumentsFirstVersion(EnvelopeDetailDto envelopeDetailDto,
-			Envelope envelope) {
+																  Envelope envelope) {
 		List<SignedDocumentResponse> signedDocumentResponseList = new ArrayList<>();
 
 		envelopeDetailDto.getDocumentIds().forEach(doc -> {
@@ -1238,13 +1241,15 @@ public class EnvelopeServiceImpl implements EnvelopeService {
 		envelopeDao.save(envelope);
 
 		// Create in-app notifications for decline
-		String documentName = EsignUtil.truncateDocumentName(envelope.getDocuments().get(0).getName());
-		Map<String, String> notificationFields = Map.of("documentName", documentName, "recipientName", recipient.getAddressBook().getName());
+		String documentName = EsignUtil.truncateDocumentName(envelope.getDocuments().getFirst().getName());
+		EsignEmailDynamicFields esignEmailDynamicFields = new EsignEmailDynamicFields();
+		esignEmailDynamicFields.setDocumentName(documentName);
+		esignEmailDynamicFields.setRecipientName(recipient.getAddressBook().getName());
 
 		// Sender always gets notification
 		notificationService.createNotification(envelope.getOwner().getInternalUser().getEmployee(),
 			String.valueOf(envelope.getId()), NotificationType.DOCUMENT_DECLINED,
-			EmailBodyTemplates.ESIGN_DOCUMENT_DECLINED, notificationFields,
+			EmailBodyTemplates.ESIGN_DOCUMENT_DECLINED, esignEmailDynamicFields,
 			NotificationCategory.ESIGN);
 
 		// For parallel signing or sequential with multiple recipients, all recipients get notification
@@ -1254,7 +1259,7 @@ public class EnvelopeServiceImpl implements EnvelopeService {
 				if (rec.getAddressBook() != null && rec.getAddressBook().getInternalUser() != null && rec.getAddressBook().getInternalUser().getEmployee() != null && !rec.getId().equals(recipient.getId())) {
 					notificationService.createNotification(rec.getAddressBook().getInternalUser().getEmployee(),
 						String.valueOf(envelope.getId()), NotificationType.DOCUMENT_DECLINED,
-						EmailBodyTemplates.ESIGN_DOCUMENT_DECLINED, notificationFields,
+						EmailBodyTemplates.ESIGN_DOCUMENT_DECLINED, esignEmailDynamicFields,
 						NotificationCategory.ESIGN);
 				}
 			}
@@ -1304,13 +1309,14 @@ public class EnvelopeServiceImpl implements EnvelopeService {
 			envelopeDao.save(envelope);
 
 			// Create in-app notifications for expiration - sender and all recipients
-			String documentName = EsignUtil.truncateDocumentName(envelope.getDocuments().get(0).getName());
-			Map<String, String> notificationFields = Map.of("documentName", documentName);
+			String documentName = EsignUtil.truncateDocumentName(envelope.getDocuments().getFirst().getName());
+			EsignEmailDynamicFields esignEmailDynamicFields = new EsignEmailDynamicFields();
+			esignEmailDynamicFields.setDocumentName(documentName);
 
 			// Notify sender
 			notificationService.createNotification(envelope.getOwner().getInternalUser().getEmployee(),
 				String.valueOf(envelope.getId()), NotificationType.DOCUMENT_EXPIRED,
-				EmailBodyTemplates.ESIGN_DOCUMENT_EXPIRED, notificationFields,
+				EmailBodyTemplates.ESIGN_DOCUMENT_EXPIRED, esignEmailDynamicFields,
 				NotificationCategory.ESIGN);
 
 			// Notify all recipients
@@ -1318,7 +1324,7 @@ public class EnvelopeServiceImpl implements EnvelopeService {
 				if (rec.getAddressBook() != null && rec.getAddressBook().getInternalUser() != null && rec.getAddressBook().getInternalUser().getEmployee() != null) {
 					notificationService.createNotification(rec.getAddressBook().getInternalUser().getEmployee(),
 						String.valueOf(envelope.getId()), NotificationType.DOCUMENT_EXPIRED,
-						EmailBodyTemplates.ESIGN_DOCUMENT_EXPIRED, notificationFields,
+						EmailBodyTemplates.ESIGN_DOCUMENT_EXPIRED, esignEmailDynamicFields,
 						NotificationCategory.ESIGN);
 				}
 			}
